--- a/app/templates/form.html
+++ b/app/templates/form.html
@@ -80,23 +80,27 @@
                                         <option value="Playout">Playout</option>
                                         <option value="Masterround">Masterround</option>
                                         <option value="Amichevole">Amichevole</option>
+                                        <option value="Amichevole">Torneo</option>
                                     </select>
                                     <label>Tipo Gara</label>
                                     <div class="invalid-feedback">Scegli il tipo di gara</div>
                                 </div>
                             </div>
 
-                            <div class="col-md-6">
-                                <div class="form-floating">
-                                    <input type="number" step="0.01" name="indennizzo" id="indennizzoField" class="form-control" readonly required>
-                                    <label for="indennizzoField">Indennizzo (CHF)</label>
-                                </div>
-                            </div>
-
-                            <div class="col-md-6">
-                                <div class="form-floating">
-                                    <input type="number" step="0.01" name="trasferta" class="form-control" placeholder="Opzionale">
-                                    <label>Trasferta (CHF)</label>
+                            <div class="col-12">
+                                <div class="row g-2">
+                                    <div class="col">
+                                        <div class="form-floating">
+                                            <input type="number" step="0.01" name="indennizzo" id="indennizzoField" class="form-control" readonly required>
+                                            <label for="indennizzoField">Indennizzo (CHF)</label>
+                                        </div>
+                                    </div>
+                                    <div class="col">
+                                        <div class="form-floating">
+                                            <input type="number" step="0.01" name="trasferta" class="form-control" placeholder="Opzionale">
+                                            <label>Trasferta (CHF)</label>
+                                        </div>
+                                    </div>
                                 </div>
                             </div>
 
