--- a/app/templates/convocazioni.html
+++ b/app/templates/convocazioni.html
@@ -143,6 +143,7 @@
                                         <option value="Playout">Playout</option>
                                         <option value="Masterround">Masterround</option>
                                         <option value="Amichevole">Amichevole</option>
+                                        <option value="Torneo">Torneo</option>
                                     </select>
                                     <label>Tipo Gara</label>
                                 </div>
