--- a/app/templates/form.html
+++ b/app/templates/form.html
@@ -80,7 +80,7 @@
                                         <option value="Playout">Playout</option>
                                         <option value="Masterround">Masterround</option>
                                         <option value="Amichevole">Amichevole</option>
-                                        <option value="Amichevole">Torneo</option>
+                                        <option value="Torneo">Torneo</option>
                                     </select>
                                     <label>Tipo Gara</label>
                                     <div class="invalid-feedback">Scegli il tipo di gara</div>
