--- a/app/templates/partials/navbar.html
+++ b/app/templates/partials/navbar.html
@@ -1,4 +1,3 @@
-
 <nav class="navbar navbar-expand-lg navbar-light bg-light mb-5">
     <div class="container-fluid">
         <a class="navbar-brand" href="/">RefManager</a>
@@ -17,8 +16,42 @@
                     <a class="nav-link" href="/gestione-sport">Gestione Sport</a>
                 </li>
                 <li class="nav-item">
+                    <a class="nav-link" href="/email-import">
+                        <i class="bi bi-envelope"></i> Import Email
+                    </a>
+                </li>
+                <li class="nav-item">
                     <a class="nav-link" href="webcal://ref.mferreira.ch/static/calendario.ics">Calendario</a>
                 </li>
+                {% if user and user.role == 'admin' %}
+                <li class="nav-item">
+                    <a class="nav-link" href="/users">
+                        <i class="bi bi-people"></i> Gestione Utenti
+                    </a>
+                </li>
+                {% endif %}
+            </ul>
+            
+            <ul class="navbar-nav ms-auto">
+                {% if user %}
+                <li class="nav-item dropdown">
+                    <a class="nav-link dropdown-toggle" href="#" id="userDropdown" role="button" data-bs-toggle="dropdown" aria-expanded="false">
+                        <i class="bi bi-person-circle me-1"></i>{{ user.username }}
+                    </a>
+                    <ul class="dropdown-menu dropdown-menu-end" aria-labelledby="userDropdown">
+                        <li><a class="dropdown-item" href="/profile"><i class="bi bi-person me-2"></i>Profilo</a></li>
+                        <li><hr class="dropdown-divider"></li>
+                        <li><a class="dropdown-item" href="/logout"><i class="bi bi-box-arrow-right me-2"></i>Logout</a></li>
+                    </ul>
+                </li>
+                {% else %}
+                <li class="nav-item">
+                    <a class="nav-link" href="/login"><i class="bi bi-box-arrow-in-right me-1"></i>Accedi</a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link" href="/register"><i class="bi bi-person-plus me-1"></i>Registrati</a>
+                </li>
+                {% endif %}
             </ul>
         </div>
     </div>
